# Roboticus-Data-Visualiser

./: .gitignore  CMakeLists.txt  Main.qml  README.md  RoboticusDataVisualiser.desktop  SensorController.cpp  SensorController.h  SensorModel.cpp  SensorModel.h  SerialParser.cpp  SerialParser.h  VectorController.cpp  VectorController.h  VectorModel.cpp  VectorModel.h  app.rc  com.Roboticus.ControlCenter.desktop  com.roboticus.DataVisualiser.desktop  com.roboticus.DataVisualiser.metainfo.xml  com.roboticus.DataVisualiser.yml  com.roboticus.datavisualiser.desktop  main.cpp
.cache/clangd/index/: ControllerUtils.h.993DB1CECD21EA6B.idx  FrameDecoder.cpp.999372DE52F30445.idx  FrameDecoder.h.AAF25FB3F04737CC.idx  FrameTypes.h.E56F72C01B525D56.idx  SensorController.cpp.93E6A2A8C0DF2AF7.idx  SensorController.h.8D01E84B49B0EA17.idx  SensorModel.cpp.636E97A58ED6F788.idx  SensorModel.h.8CF62A09685B252E.idx  SerialFrameExtractor.cpp.ABA7874C0D79CD10.idx  SerialFrameExtractor.h.7A7621569FD9E5FE.idx  SerialParser.cpp.877413DAFD8CB69E.idx  SerialParser.h.14C96657022E41DC.idx  SnapshotLoader.cpp.A96C499849E90A8D.idx  SnapshotLoader.h.F50879C216DFCC06.idx  SnapshotStore.cpp.C1D35F39D4B2CFBD.idx  SnapshotStore.h.0500A438CC704DF2.idx  VectorModel.cpp.C8D0C7DB46FF6652.idx  VectorModel.h.B1F6372DAF985670.idx  endianhelper.h.285045EA0F1009D6.idx  geometry.cpp.DF2206F0BEEC1968.idx  geometry.h.AD771ED4AD1CAFD4.idx  main.cpp.0D2B21BE13F670B2.idx  msgpack.cpp.A6523641B2D68959.idx  msgpack.h.63870EB025B254F9.idx  msgpack_export.h.6CC9BA0408FB9BBC.idx  msgpackcommon.cpp.70FAD8EC00570933.idx  msgpackcommon.h.A98AC9796D134241.idx  msgpackstream.cpp.E2B2024A5C96D4BD.idx  msgpackstream.h.2B6F587E94265F3D.idx  pack_p.cpp.AC4854471FE69AD2.idx  pack_p.h.4C80CCFC78F6AED0.idx  qt_types_p.cpp.F1C9481A9C19FB5D.idx  qt_types_p.h.9C7E61FF7495DD6B.idx  time.cpp.FB7ADEAB4AD400CB.idx  time.h.D7E30BA7221700EE.idx  unpack_p.cpp.7FAB19C0248001D9.idx  unpack_p.h.9509ACA341F6DA4C.idx
.github/workflows/: flatpak.yml  qt-build.yml
Example/: RoboticusDebugger.cpp
Example/Arduino/: RoboticusDebugger.cpp  RoboticusDebugger.h
Example/Arduino/Example/: Example.ino
Example/Example/: Example.ino
Example/Python/: Example.py  RoboticusDebugger.py
examples/: example.json
examples/Arduino/: RoboticusDebugger.cpp  RoboticusDebugger.h
examples/Arduino/Example/: Example.ino
include/: SerialParser.h  SerialPortManager.h  VectorController.h
include/controllers/: AppController.h  ControllerUtils.h  SensorController.h  VectorController.h
include/io/: SerialParser.h  SerialPortManager.h
include/models/: SensorModel.h  VectorModel.h
include/parser/: FrameDecoder.h  FrameTypes.h  SerialFrameExtractor.h  SnapshotLoader.h  SnapshotStore.h
libs/qmsgpack/: CMakeLists.txt
libs/qmsgpack/src/: CMakeLists.txt
libs/qmsgpack/src/private/: pack_p.cpp
qml/: AppCoordinator.qml  MonitoringPanel.qml  Timeline.qml  TitleBar.qml
src/: SerialParser.cpp  main.cpp
src/controllers/: AppController.cpp  SensorController.cpp  VectorController.cpp
src/io/: SerialParser.cpp  SerialPortManager.cpp
src/parser/: FrameDecoder.cpp  SerialFrameExtractor.cpp  SerialPortManager.cpp  SerialPortManager.h  SnapshotLoader.cpp  SnapshotStore.cpp
ui/: Main.qml
ui/components/: AddItem.qml  AppCoordinator.qml  ConnectionBar.qml  Error.qml  MonitoringPanel.qml  SensorInfo.qml  SensorPanel.qml  SinglePointSeries.qml  StyledComboBox.qml  Timeline.qml  TitleBar.qml  VectorArrow.qml  VectorInfo.qml
ui/components/Graph/: Graph.qml  SinglePointSeries.qml  VectorArrow.qml
ui/components/Monitor/: ItemListView.qml  Monitor.qml  SensorInfo.qml  VectorInfo.qml
ui/components/Timeline/: StyledIconButton.qml  Timeline.qml  TimelineProgressBar.qml
